@@ -1,25 +1,14 @@
-# This file contains build information for a specific project.
-# Such as :
-# The output jar name and location.
-# The resources to inculde/exclude from the build.
-# etc.
-# Create a copy of this file with the name build.properties 
-# In the project you are building.
-
-# The name of the output jar
-JAR_NAME=${project}.jar
-
-# The directory to put the output jar. (Relative to the output dir).
-JAR_DIR=
-
-# if this is true, all classpath jars for this project will be merged into output dist jar.
-MERGE_CP_JARS=
-
-# Optional manifest file in put in the jar.
-# MANIFEST=MANIFEST.MF
-
-
-# Edit include and exclude lists with eclipse build properties editor.
 bin.includes = lgpl.txt,\
-               README,\
-               CHANGELOG
+               README
+               
+
+# Compile with debug info?
+DEBUG=on
+
+# If DEBUG is on/yes/true, what debug level should be used?
+DEBUG_LEVEL=lines,vars,source               
+             
+# Vesion number
+VERSION=0.7
+    	
+               
